// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubSchema SQL Generation buildSubSchemaCte should generate CTE for deeply nested path in object 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'settings'::text as "tableId",
      'ver_settings_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'config.theme.logo.image'::text as "fieldPath",
      r."data" -> 'config' -> 'theme' -> 'logo' -> 'image' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_settings_001'
      AND jsonb_typeof(
        r."data" -> 'config' -> 'theme' -> 'logo' -> 'image'
      ) = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte should generate CTE for multiple paths 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'avatar'::text as "fieldPath",
      r."data" -> 'avatar' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(r."data" -> 'avatar') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'profile.photo'::text as "fieldPath",
      r."data" -> 'profile' -> 'photo' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(r."data" -> 'profile' -> 'photo') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'gallery'::text || '[' || (arr.idx - 1)::text || ']'
      ) as "fieldPath",
      arr.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'gallery') = 'array' THEN r."data" -> 'gallery'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'attachments'::text || '[' || (arr.idx - 1)::text || '].' || 'file'::text
      ) as "fieldPath",
      arr.elem -> 'file' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'attachments') = 'array' THEN r."data" -> 'attachments'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(arr.elem -> 'file') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'items'::text || '[' || (arr1.idx - 1)::text || ']' || '.' || 'variants'::text || '[' || (arr2.idx - 1)::text || ']' || '.' || 'image'::text
      ) as "fieldPath",
      arr2.elem -> 'image' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'items') = 'array' THEN r."data" -> 'items'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr1 (elem, idx)
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(arr1.elem -> 'variants') = 'array' THEN arr1.elem -> 'variants'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr2 (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(arr2.elem -> 'image') = 'object'
    UNION ALL
    SELECT
      'items'::text as "tableId",
      'ver_items_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'icon'::text as "fieldPath",
      r."data" -> 'icon' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_items_001'
      AND jsonb_typeof(r."data" -> 'icon') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte should generate CTE for nested arrays without trailing path 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'galleries'::text as "tableId",
      'ver_galleries_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'sections'::text || '[' || (arr1.idx - 1)::text || ']' || '.' || 'photos'::text || '[' || (arr2.idx - 1)::text || ']'
      ) as "fieldPath",
      arr2.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'sections') = 'array' THEN r."data" -> 'sections'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr1 (elem, idx)
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(arr1.elem -> 'photos') = 'array' THEN arr1.elem -> 'photos'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr2 (elem, idx)
    WHERE
      rt."B" = 'ver_galleries_001'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte should generate CTE for single path 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'avatar'::text as "fieldPath",
      r."data" -> 'avatar' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(r."data" -> 'avatar') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte should generate empty CTE for empty tables 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      NULL as "tableId",
      NULL as "tableVersionId",
      NULL as "rowId",
      NULL as "rowVersionId",
      NULL as "fieldPath",
      NULL as "data"
    WHERE
      false
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte should use custom CTE name 1`] = `
"WITH
  custom_cte AS (
    SELECT
      'files'::text as "tableId",
      'ver_files_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'document'::text as "fieldPath",
      r."data" -> 'document' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_files_001'
      AND jsonb_typeof(r."data" -> 'document') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle mixed quoted and unquoted paths in same table 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'articles'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'avatar'::text as "fieldPath",
      r."data" -> 'avatar' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'avatar') = 'object'
    UNION ALL
    SELECT
      'articles'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'cover-image'::text as "fieldPath",
      r."data" -> 'cover-image' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'cover-image') = 'object'
    UNION ALL
    SELECT
      'articles'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'metadata.hero-banner'::text as "fieldPath",
      r."data" -> 'metadata' -> 'hero-banner' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'metadata' -> 'hero-banner') = 'object'
    UNION ALL
    SELECT
      'articles'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'media-items'::text || '[' || (arr.idx - 1)::text || '].' || 'file'::text
      ) as "fieldPath",
      arr.elem -> 'file' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'media-items') = 'array' THEN r."data" -> 'media-items'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(arr.elem -> 'file') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle nested arrays with quoted keys 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'catalog'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'product-lines'::text || '[' || (arr1.idx - 1)::text || ']' || '.' || 'color-variants'::text || '[' || (arr2.idx - 1)::text || ']' || '.' || 'image-url'::text
      ) as "fieldPath",
      arr2.elem -> 'image-url' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'product-lines') = 'array' THEN r."data" -> 'product-lines'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr1 (elem, idx)
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(arr1.elem -> 'color-variants') = 'array' THEN arr1.elem -> 'color-variants'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr2 (elem, idx)
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(arr2.elem -> 'image-url') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle quoted array path with trailing hyphenated key 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'test-results'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'results'::text || '[' || (arr.idx - 1)::text || '].' || 'test-case'::text
      ) as "fieldPath",
      arr.elem -> 'test-case' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'results') = 'array' THEN r."data" -> 'results'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(arr.elem -> 'test-case') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle quoted array path without trailing key 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'media'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'gallery-items'::text || '[' || (arr.idx - 1)::text || ']'
      ) as "fieldPath",
      arr.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'gallery-items') = 'array' THEN r."data" -> 'gallery-items'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_001'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle quoted nested object path 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'config'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'api-settings.auth-token'::text as "fieldPath",
      r."data" -> 'api-settings' -> 'auth-token' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'api-settings' -> 'auth-token') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaCte with quoted/hyphenated keys should handle quoted single path (hyphenated key) 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'test-results'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'test-case'::text as "fieldPath",
      r."data" -> 'test-case' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'test-case') = 'object'
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaOrderBy should generate ORDER BY for data field with nulls 1`] = `
"ORDER BY
  "data" ->> 'size' DESC NULLS LAST"
`;

exports[`SubSchema SQL Generation buildSubSchemaOrderBy should generate ORDER BY for multiple fields 1`] = `
"ORDER BY
  "tableId" ASC,
  "rowId" DESC,
  "data" ->> 'size' DESC NULLS LAST"
`;

exports[`SubSchema SQL Generation buildSubSchemaOrderBy should generate ORDER BY for rowCreatedAt with rowTableAlias 1`] = `
"ORDER BY
  r."createdAt" DESC,
  ssi."data" ->> 'fileId' ASC NULLS LAST"
`;

exports[`SubSchema SQL Generation buildSubSchemaOrderBy should generate ORDER BY for tableId 1`] = `
"ORDER BY
  "tableId" ASC"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery (legacy) should generate SQL for all path types 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'avatar'::text as "fieldPath",
      r."data" -> 'avatar' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(r."data" -> 'avatar') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'profile.photo'::text as "fieldPath",
      r."data" -> 'profile' -> 'photo' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(r."data" -> 'profile' -> 'photo') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'gallery'::text || '[' || (arr.idx - 1)::text || ']'
      ) as "fieldPath",
      arr.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'gallery') = 'array' THEN r."data" -> 'gallery'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'attachments'::text || '[' || (arr.idx - 1)::text || '].' || 'file'::text
      ) as "fieldPath",
      arr.elem -> 'file' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'attachments') = 'array' THEN r."data" -> 'attachments'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(arr.elem -> 'file') = 'object'
    UNION ALL
    SELECT
      'characters'::text as "tableId",
      'ver_characters_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'items'::text || '[' || (arr1.idx - 1)::text || ']' || '.' || 'variants'::text || '[' || (arr2.idx - 1)::text || ']' || '.' || 'image'::text
      ) as "fieldPath",
      arr2.elem -> 'image' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'items') = 'array' THEN r."data" -> 'items'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr1 (elem, idx)
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(arr1.elem -> 'variants') = 'array' THEN arr1.elem -> 'variants'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr2 (elem, idx)
    WHERE
      rt."B" = 'ver_characters_001'
      AND jsonb_typeof(arr2.elem -> 'image') = 'object'
    UNION ALL
    SELECT
      'items'::text as "tableId",
      'ver_items_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'icon'::text as "fieldPath",
      r."data" -> 'icon' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_items_001'
      AND jsonb_typeof(r."data" -> 'icon') = 'object'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
WHERE
  (
    "tableId" = 'characters'
    AND "data" #> '{status}' = to_jsonb(CAST('uploaded' AS text))
    AND jsonb_path_exists(
      "data",
      '$.mimeType ? (@ like_regex "^image/.*")'::jsonpath
    )
  )
  AND (
    jsonb_path_exists(
      "data",
      '$.size ? (@ >= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(1000 AS numeric)))
    )
    OR jsonb_path_exists(
      "data",
      '$.size ? (@ <= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(100 AS numeric)))
    )
  )
ORDER BY
  "tableId" ASC,
  "data" ->> 'size' DESC NULLS LAST
LIMIT
  20
OFFSET
  10"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery (legacy) should generate SQL for deeply nested path in object 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'settings'::text as "tableId",
      'ver_settings_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'config.theme.logo.image'::text as "fieldPath",
      r."data" -> 'config' -> 'theme' -> 'logo' -> 'image' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_settings_001'
      AND jsonb_typeof(
        r."data" -> 'config' -> 'theme' -> 'logo' -> 'image'
      ) = 'object'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
LIMIT
  10
OFFSET
  0"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery (legacy) should generate SQL for empty tables array 1`] = `
"SELECT
  NULL as "tableId",
  NULL as "tableVersionId",
  NULL as "rowId",
  NULL as "rowVersionId",
  NULL as "fieldPath",
  NULL as "data"
WHERE
  false"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery (legacy) should generate SQL for nested arrays without trailing path 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'galleries'::text as "tableId",
      'ver_galleries_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'sections'::text || '[' || (arr1.idx - 1)::text || ']' || '.' || 'photos'::text || '[' || (arr2.idx - 1)::text || ']'
      ) as "fieldPath",
      arr2.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'sections') = 'array' THEN r."data" -> 'sections'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr1 (elem, idx)
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(arr1.elem -> 'photos') = 'array' THEN arr1.elem -> 'photos'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr2 (elem, idx)
    WHERE
      rt."B" = 'ver_galleries_001'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
LIMIT
  50
OFFSET
  0"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery (legacy) should generate count SQL 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'media'::text as "tableId",
      'ver_media_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'cover'::text as "fieldPath",
      r."data" -> 'cover' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_media_001'
      AND jsonb_typeof(r."data" -> 'cover') = 'object'
    UNION ALL
    SELECT
      'media'::text as "tableId",
      'ver_media_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      (
        'gallery'::text || '[' || (arr.idx - 1)::text || ']'
      ) as "fieldPath",
      arr.elem as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
      CROSS JOIN LATERAL jsonb_array_elements(
        CASE
          WHEN jsonb_typeof(r."data" -> 'gallery') = 'array' THEN r."data" -> 'gallery'
          ELSE '[]'::jsonb
        END
      ) WITH ORDINALITY AS arr (elem, idx)
    WHERE
      rt."B" = 'ver_media_001'
  )
SELECT
  COUNT(*)::bigint as count
FROM
  sub_schema_items
WHERE
  "data" #> '{status}' = to_jsonb(CAST('uploaded' AS text))"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery edge cases should generate query with orderBy but no where 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'files'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'doc'::text as "fieldPath",
      r."data" -> 'doc' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'doc') = 'object'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
ORDER BY
  "rowId" ASC
LIMIT
  50
OFFSET
  0"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery edge cases should generate query with where but no orderBy 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'files'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'doc'::text as "fieldPath",
      r."data" -> 'doc' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'doc') = 'object'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
WHERE
  "tableId" = 'files'
LIMIT
  50
OFFSET
  0"
`;

exports[`SubSchema SQL Generation buildSubSchemaQuery edge cases should generate query without where or orderBy 1`] = `
"WITH
  sub_schema_items AS (
    SELECT
      'files'::text as "tableId",
      'ver_001'::text as "tableVersionId",
      r.id as "rowId",
      r."versionId" as "rowVersionId",
      'doc'::text as "fieldPath",
      r."data" -> 'doc' as "data"
    FROM
      "Row" r
      INNER JOIN "_RowToTable" rt ON r."versionId" = rt."A"
    WHERE
      rt."B" = 'ver_001'
      AND jsonb_typeof(r."data" -> 'doc') = 'object'
  )
SELECT
  "tableId",
  "tableVersionId",
  "rowId",
  "rowVersionId",
  "fieldPath",
  "data"
FROM
  sub_schema_items
LIMIT
  50
OFFSET
  0"
`;

exports[`SubSchema SQL Generation buildSubSchemaWhere should generate WHERE for complex AND/OR conditions 1`] = `
"WHERE
  (
    "tableId" = 'characters'
    AND "data" #> '{status}' = to_jsonb(CAST('uploaded' AS text))
    AND jsonb_path_exists(
      "data",
      '$.mimeType ? (@ like_regex "^image/.*")'::jsonpath
    )
  )
  AND (
    jsonb_path_exists(
      "data",
      '$.size ? (@ >= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(1000 AS numeric)))
    )
    OR jsonb_path_exists(
      "data",
      '$.size ? (@ <= $val)'::jsonpath,
      jsonb_build_object('val', to_jsonb(CAST(100 AS numeric)))
    )
  )"
`;

exports[`SubSchema SQL Generation buildSubSchemaWhere should generate WHERE for data field equals 1`] = `
"WHERE
  "data" #> '{status}' = to_jsonb(CAST('uploaded' AS text))"
`;

exports[`SubSchema SQL Generation buildSubSchemaWhere should generate WHERE for tableId filter 1`] = `
"WHERE
  "tableId" = 'characters'"
`;

exports[`SubSchema SQL Generation buildSubSchemaWhere should generate WHERE with NOT condition 1`] = `
"WHERE
  NOT (
    "data" #> '{status}' = to_jsonb(CAST('ready' AS text))
  )"
`;
